--- a/styles/index.css
+++ b/styles/index.css
@@ -1,20 +1,27 @@
-header {background-image: url("../images/bg-header.png"); height: 300px; border-bottom: 5px ridge #9D8FF7;}
-	header > h1 {font-size: 45px; text-align: center;}
-	header > img { border: 5px groove #1C6EA4; height: 110px; width: 110px; margin-top: 15px; margin-bottom: 15px; }
-	header > #liens {}
-		header > #liens > .media {}
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+header {display: block; background-image: url("../images/bg-header.png"); height: 300px; border-bottom: 5px ridge #9D8FF7;}
+	header > h1 {font-size: 45px; text-align: center; font-family: 'Major Mono Display', monospace;}
+	header > img {display: block; margin: auto; border: 5px groove #1C6EA4; height: 110px; width: 110px; margin-top: 15px; margin-bottom: 15px;}
+	header > #liens {/*display: inline-block;*/ display: flex; justify-content: space-evenly;} /*Div pour les icones*/
+		header > #liens > .media {display: inline-block;}
+		header > #liens > .media > img { height: 50px; margin-top: 15px; margin-bottom: 15px;}
+		header > p {font-size: 20px; text-align: center;}
 
-#competences {background-image: url("../images/bg-page.png"); height: 100px; border-bottom: 5px ridge #9D8FF7;}
-	#competences > h2 {font-size: 30px; text-align: center;}
-	#competences > p {}
-	#competences > #liens_comp {}
+#competences {display: block; background-image: url("../images/bg-page.png"); height: 100px; border-bottom: 5px ridge #9D8FF7; height: auto;}
+	#competences > h2 {font-size: 30px; text-align: center; margin-top: 15px; margin-bottom: 15px;}
+	#competences > p {font-size: 15px; text-align: center; margin-bottom: 15px;}
+	#competences > #liens_comp {display: flex; justify-content: space-evenly;}
+		#competences > #liens_comp > img {height: 60px; margin-top: 15px; margin-bottom: 15px;} /* faire en sorte que la div s'adapte au contenu*/
 
-#projets {background-image: url("../images/bg-page.png"); height: 300px; border-bottom: 5px ridge #9D8FF7;}
-	#projets > h2 {font-size: 30px; text-align: center;}
-	#projets > .bloc {}
-		#projets > .bloc > h3 {}
-		#projets > .bloc > img {}
+#projets { display: block; background-image: url("../images/bg-page.png"); height: 300px; border-bottom: 5px ridge #9D8FF7;}
+	#projets > h2 {font-size: 30px; text-align: center; margin-top: 15px; margin-bottom: 15px;}
+	#projets > .bloc {display: block; border: 5px ridge #9D8FF7;}
+		#projets > .bloc > h3 {font-size: 30px; text-align: center; margin-top: 15px; margin-bottom: 15px;}
+		#projets > .bloc > img {width: 10px; height: 10px; display: block; margin: auto; margin-top: 15px; margin-bottom: 15px;}
+		#projets > .bloc > p {font-size: 20px; text-align: center; margin-top: 15px; margin-bottom: 15px; display: none;}
 
-footer {}
-	footer > p {}
-	footer > .media2 {}	
+footer { background-image: url("../images/bg-header.png"); display: flex; justify-content: space-evenly;}
+	footer > p {font-size: 30px; text-align: center;}
+	footer > .media2 {display: inline-block; }
+		footer > .media2 > img { height: 50px; margin-top: 15px; margin-bottom: 15px;}
+
